--- a/data_science_dla_kazdego/numpy.ipynb
+++ b/data_science_dla_kazdego/numpy.ipynb
@@ -976,11 +976,11 @@
         "np.arange(1,7).tolist()"
       ],
       "metadata": {
-        "id": "o6-xv9_-KcOD",
-        "outputId": "48a2c9e6-b06f-4071-c2e4-f96047fc9c92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o6-xv9_-KcOD",
+        "outputId": "48a2c9e6-b06f-4071-c2e4-f96047fc9c92"
       },
       "execution_count": 62,
       "outputs": [
@@ -2103,15 +2103,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SwsUm39mtZTF"
-      },
-      "source": [
-        "## Operacje matematyczne"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "living-cradle"
       },
       "source": [
@@ -2601,6 +2592,156 @@
       ],
       "source": [
         "np.log(a)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Iloczyn tensorowy\n",
+        "\n",
+        "`np.dot` polega na przemnarzaniu wierszy `x` przez kolumny `y` i ich sumowaniu. Ważne więc, aby wymiar wiersza odpowiadał wymiarowi kolumny. \n",
+        "\n",
+        "Jeśli `x` i `y` są wektorami tego samego kształtu, to `np.dot(x, y)` przemnoży pierwszy element `x` przez pierwszy element `y`, drugi element `x` przez drugi element `y`, itd. i na koniec zsumuje te iloczyny. Wynikiem będzie więc wartość skalarna.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3mJKenWIdDOn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# wektory\n",
+        "x = np.array([1,2])\n",
+        "y = np.array([3,4])\n",
+        "print(f'x =\\n {x}')\n",
+        "print(f'y =\\n {y}')\n",
+        "\n",
+        "dot = np.dot(x,y)\n",
+        "print(f'np.dot(x,y) = {dot}')"
+      ],
+      "metadata": {
+        "id": "r_K4Sd34aoI5",
+        "outputId": "119bd038-1011-49d3-da27-5f2c1f29dc39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x =\n",
+            " [1 2]\n",
+            "y =\n",
+            " [3 4]\n",
+            "np.dot(x,y) = 11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Jeśli `x` i `y` są macierzami, to aby `np.dot(x, y)` był w ogóle możliwy wymagane jest `x.shape[1] = y.shape[0]`. Następnie `np.dot(x, y)` dla każdego wiersza `x`,  przemnoży pierwszy element tego wiersza przez pierwszy element pierwszej kolumny `y`, drugi element tego wiersza przez drugi element pierszej kolumny `y`, itd. i na koniec zsumuje te iloczyny; potem weźnie drugi wiersz `x` i postąpi tak samo, i tak do ostatniego wiersza. \n",
+        "Wynikiem będzie macierz `(x.shape[0], y.shape[1])`."
+      ],
+      "metadata": {
+        "id": "BnhGRM3wiebc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# macierze\n",
+        "x = np.array([[1,2],\n",
+        "              [3,4]])\n",
+        "y = np.array([[5,6,7],\n",
+        "              [8,9,10]])\n",
+        "print(f'x =\\n {x}')\n",
+        "print(f'y =\\n {y}')\n",
+        "print(f'x.shape =\\n {x.shape}')\n",
+        "print(f'y.shape =\\n {y.shape}')\n",
+        "\n",
+        "dot = np.dot(x,y)\n",
+        "print(f'np.dot(x,y) =\\n {dot}')\n",
+        "print(f'x @ y =\\n {x @ y}')"
+      ],
+      "metadata": {
+        "id": "azi7MN0Piezb",
+        "outputId": "702cd329-e144-48d2-b090-b853508f1916",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x =\n",
+            " [[1 2]\n",
+            " [3 4]]\n",
+            "y =\n",
+            " [[ 5  6  7]\n",
+            " [ 8  9 10]]\n",
+            "x.shape =\n",
+            " (2, 2)\n",
+            "y.shape =\n",
+            " (2, 3)\n",
+            "np.dot(x,y) =\n",
+            " [[21 24 27]\n",
+            " [47 54 61]]\n",
+            "x @ y =\n",
+            " [[21 24 27]\n",
+            " [47 54 61]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# wektor z macierzą\n",
+        "x = np.array([1,2])\n",
+        "y = np.array([[5,6],\n",
+        "              [7,8]])\n",
+        "print(f'x =\\n {x}')\n",
+        "print(f'y =\\n {y}')\n",
+        "print(f'x.shape =\\n {x.shape}')\n",
+        "print(f'y.shape =\\n {y.shape}')\n",
+        "\n",
+        "dot = np.dot(x,y)\n",
+        "print(f'np.dot(x,y) = {dot}')"
+      ],
+      "metadata": {
+        "id": "spqZM3YxikmM",
+        "outputId": "41de4f6e-e2a5-4e87-ba84-010a233067f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x =\n",
+            " [1 2]\n",
+            "y =\n",
+            " [[5 6]\n",
+            " [7 8]]\n",
+            "x.shape =\n",
+            " (2,)\n",
+            "y.shape =\n",
+            " (2, 2)\n",
+            "np.dot(x,y) = [19 22]\n"
+          ]
+        }
       ]
     },
     {
