--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/trypuz/ksiazka_si/blob/main/data_science/pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/trypuz/ai_dla_kazdego/blob/main/data_science_dla_kazdego/pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,7 +16,11 @@
         "id": "FRuduVOrQM4a"
       },
       "source": [
-        "# PANDAS"
+        "# Pandas\n",
+        "\n",
+        "Pandas, od angielskiej frazy *panel data analysis, jest biblioteką służącą do przetwarzania danych, w szczególności analizy danych.\n",
+        "\n",
+        "Podstawowymi obiektami Pandas są obiekty typu `Series` i `DataFrame`. Pierwsze z wymienionych można rozumieć jako wektory Numpy z etykietami indeksów (wierszy). Natomiast obiekty typu `DataFrame` są tabelami z ideksami (wierszami) oraz kolumnami postaci nazw."
       ]
     },
     {
