--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -20,12 +20,14 @@
         "\n",
         "Pandas, od angielskiej frazy *panel data analysis, jest biblioteką służącą do przetwarzania danych, w szczególności analizy danych.\n",
         "\n",
-        "Podstawowymi obiektami Pandas są obiekty typu `Series` i `DataFrame`. Pierwsze z wymienionych można rozumieć jako wektory Numpy z etykietami indeksów (wierszy). Natomiast obiekty typu `DataFrame` są tabelami z ideksami (wierszami) oraz kolumnami postaci nazw."
+        "Podstawowymi obiektami Pandas są obiekty typu `Series` i `DataFrame`. Pierwsze z wymienionych można rozumieć jako wektory Numpy z etykietami indeksów (wierszy). Natomiast obiekty typu `DataFrame` są tabelami z ideksami (wierszami) oraz kolumnami postaci nazw.\n",
+        "\n",
+        "Pandas importujemy za pomocą `import pandas as pd`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "vsTrnlUYWaP3"
       },
@@ -45,31 +47,27 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "eLQqVnPRWEA4"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "labels = ['label1','label2','label3']\n",
-        "l = [1, 2, 3]\n",
-        "a = np.array(l)\n",
-        "d = {'k1': 1, 'k2':2, 'k3': 3}"
-      ]
+        "Obiekty typu `Series` możemy utworzyć z listy lub z wektora Numpy:"
+      ],
+      "metadata": {
+        "id": "zF2zGx-ZfWyO"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
+        "id": "eLQqVnPRWEA4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "C6ssXXpZWgZC",
-        "outputId": "123536da-2a25-4510-f50f-36360fbd4007"
+        "outputId": "9e7af810-29a8-40ce-a529-203dcb3bd256"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0    1\n",
@@ -78,14 +76,53 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 9,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 22
         }
       ],
       "source": [
+        "l = [1, 2, 3]\n",
         "pd.Series(l)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C6ssXXpZWgZC",
+        "outputId": "c623789b-9f1b-4e8b-ead8-5b70407942e5"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    1\n",
+              "1    2\n",
+              "2    3\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ],
+      "source": [
+        "a = np.array(l)\n",
+        "pd.Series(a)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Zauważmy, że automatycznie pojawiły się indeksy numeryczne od `0` do `2`."
+      ],
+      "metadata": {
+        "id": "NmMfFyYjfrAF"
+      }
     },
     {
       "cell_type": "code",
@@ -113,6 +150,7 @@
         }
       ],
       "source": [
+        "labels = ['label1','label2','label3']\n",
         "pd.Series(data=l, index=labels)"
       ]
     },
@@ -200,6 +238,7 @@
         }
       ],
       "source": [
+        "d = {'k1': 1, 'k2':2, 'k3': 3}\n",
         "pd.Series(d)"
       ]
     },
