--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -125,17 +125,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Gdybyśmy chcieli nadać własne nazwy indeksom możemy zrobić to tak:"
+      ],
+      "metadata": {
+        "id": "zfIY457GgUE8"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XBWiLb1yWoAn",
-        "outputId": "86f4fd90-5763-4a45-8e1c-c3e5308f516e"
+        "outputId": "b9b2ff27-7d2e-400e-b85f-475c6b9bc7db"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "label1    1\n",
@@ -144,9 +154,8 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 10,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 24
         }
       ],
       "source": [
@@ -156,45 +165,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iuI-y_fSW7qy",
-        "outputId": "3cf7cc26-5d70-47ad-8cea-3d1d77b59577"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0    1\n",
-              "1    2\n",
-              "2    3\n",
-              "dtype: int64"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "pd.Series(a)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aC4DkVj-W-wC",
-        "outputId": "a19580e5-d921-4dfd-e484-f6511bed27c0"
+        "outputId": "7261a838-9676-48fd-a686-9387043e6045"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "label1    1\n",
@@ -203,9 +184,8 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 12,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 25
         }
       ],
       "source": [
@@ -213,17 +193,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Poręcznie jest tworzyć obiekty `Series` korzystając ze słowników. Klucze słownika staną się indeksami, a wartości słownika danymi."
+      ],
+      "metadata": {
+        "id": "_iAjY5D3ghS2"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ogcO-kKdXBi7",
-        "outputId": "001189af-aea5-4984-9058-79706e216ac2"
+        "outputId": "e969e98d-d50c-4930-c513-a87d7cc4b664"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "k1    1\n",
@@ -232,9 +222,8 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 13,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 26
         }
       ],
       "source": [
