--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -232,17 +232,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Nadawanie znaczących nazw indeksom jest możliwe i sensowne, gdy rozumiemy dane. Na przykład poniżej utworzymy dwa obiekty typu `Series`, które będą przechowywać dane dotyczące liczby ludności w danym kraju w roku 1922 i 2022."
+      ],
+      "metadata": {
+        "id": "U-ea9sijgzgb"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h56_TevyYOMi",
-        "outputId": "a7a2195f-dee2-49a6-a8b6-22809408f305"
+        "outputId": "829bc48b-aabd-467e-981b-15b682bde040"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "USA        331\n",
@@ -252,9 +262,8 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 29,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 27
         }
       ],
       "source": [
@@ -266,24 +275,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rycGLxGvZxRN",
-        "outputId": "0f2032a7-bcc0-495b-850f-84fe6806a90c"
+        "outputId": "0b5fb52d-228f-4aaf-a9ad-832b7b7e266e"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "38"
             ]
           },
-          "execution_count": 17,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 28
         }
       ],
       "source": [
