--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -274,14 +274,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Za pomocą nazwy indeksu możemy wydobyć dane dotyczące liczby lubności w konkretnym kraju, np.:"
+      ],
+      "metadata": {
+        "id": "Q0CwV33Uhu3Q"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rycGLxGvZxRN",
-        "outputId": "0b5fb52d-228f-4aaf-a9ad-832b7b7e266e"
+        "outputId": "21300c4b-9156-4869-839c-d46fa1aaba24"
       },
       "outputs": [
         {
@@ -292,12 +301,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 29
         }
       ],
       "source": [
         "population_2022['Poland']"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Gdybyśmy chcieli zbadać przyrost ludności od 1922 do 2022, to możemy zrobić to bardzo prosto:"
+      ],
+      "metadata": {
+        "id": "lEFk6C6hiEZh"
+      }
     },
     {
       "cell_type": "code",
