--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -193,6 +193,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "pd.Series(np.random.randint(3), index=labels)"
+      ],
+      "metadata": {
+        "id": "QWn3dpC2kDEl",
+        "outputId": "432dff48-6e1b-4cb8-e5cf-d7d86e4e3bfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "label1    1\n",
+              "label2    1\n",
+              "label3    1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Poręcznie jest tworzyć obiekty `Series` korzystając ze słowników. Klucze słownika staną się indeksami, a wartości słownika danymi."
