--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "vsTrnlUYWaP3"
       },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "eLQqVnPRWEA4",
         "colab": {
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,6 +116,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "pd.Series(np.random.randint(0,10,5))"
+      ],
+      "metadata": {
+        "id": "QWn3dpC2kDEl",
+        "outputId": "1ed3dc0c-e155-4e13-ef4a-cf462d73a266",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    4\n",
+              "1    5\n",
+              "2    0\n",
+              "3    4\n",
+              "4    5\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Zauważmy, że automatycznie pojawiły się indeksy numeryczne od `0` do `2`."
@@ -135,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -193,35 +224,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "pd.Series(np.random.randint(3), index=labels)"
-      ],
-      "metadata": {
-        "id": "QWn3dpC2kDEl",
-        "outputId": "432dff48-6e1b-4cb8-e5cf-d7d86e4e3bfc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "label1    1\n",
-              "label2    1\n",
-              "label3    1\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Poręcznie jest tworzyć obiekty `Series` korzystając ze słowników. Klucze słownika staną się indeksami, a wartości słownika danymi."
@@ -232,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -271,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -313,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,6 +337,34 @@
       ],
       "source": [
         "population_2022['Poland']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_2022[:2]"
+      ],
+      "metadata": {
+        "id": "HSspte4Ylrl6",
+        "outputId": "405926c1-9772-4152-d344-b2a6cdf6c28c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "USA      331\n",
+              "Italy     60\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
       ]
     },
     {
