--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -20,14 +20,14 @@
         "\n",
         "Pandas, od angielskiej frazy *panel data analysis, jest biblioteką służącą do przetwarzania danych, w szczególności analizy danych.\n",
         "\n",
-        "Podstawowymi obiektami Pandas są obiekty typu `Series` i `DataFrame`. Pierwsze z wymienionych można rozumieć jako wektory Numpy z etykietami indeksów (wierszy). Natomiast obiekty typu `DataFrame` są tabelami z ideksami (wierszami) oraz kolumnami postaci nazw.\n",
+        "Podstawowymi obiektami Pandas są obiekty typu `Series` i `DataFrame`. Pierwsze z wymienionych można rozumieć jako wektory Numpy z etykietami (ang. *labels*) indeksów wierszy (choć ściśle rzecz ujmując od wersji 0.13.0 `Series` nie są już podklasą klasy `ndarray` NumPy, lecz `NDFrame`). Natomiast obiekty typu `DataFrame` są tabelami z etykietami zarówno dla ideksów (wierszy) oraz kolumnami. Połączenie etykiet z danymi jest bardzo silne w Pandas i pozwala na różne interesujące operacje, o których napiszemy poniżej.\n",
         "\n",
         "Pandas importujemy za pomocą `import pandas as pd`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "vsTrnlUYWaP3"
       },
@@ -226,6 +226,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Jeśli danych będzie mniej niż etykiet, to otrzymamy następujący obiekt:"
+      ],
+      "metadata": {
+        "id": "zHXYmsx7auXz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Poręcznie jest tworzyć obiekty `Series` korzystając ze słowników. Klucze słownika staną się indeksami, a wartości słownika danymi."
       ],
       "metadata": {
@@ -234,13 +243,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ogcO-kKdXBi7",
-        "outputId": "e969e98d-d50c-4930-c513-a87d7cc4b664"
+        "outputId": "734997cb-3ad7-484c-bcbc-2a5625ab5c1f"
       },
       "outputs": [
         {
@@ -254,12 +263,51 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 10
         }
       ],
       "source": [
         "d = {'k1': 1, 'k2':2, 'k3': 3}\n",
         "pd.Series(d)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Możemy również dodać własny indeks do słownika, który jeśli będzie korespondował z kluczami słownika, to ,,przejmie,, wartości ze słownika. Etykiety z indeksu, które nie będą miały odpowienika wśród kluczy słownika, otrzymają przypisaną wartość `Nan` (ang. *not a number*), która oznacza brakujące dane."
+      ],
+      "metadata": {
+        "id": "Bv3BRCJIbm06"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.Series(data=d, index=['k2', 'k3', 'k1', 'k4'])"
+      ],
+      "metadata": {
+        "id": "uALCaRLNa1bE",
+        "outputId": "bc62ac29-d3a6-42f3-fcdd-974f21215959",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "k2    2.0\n",
+              "k3    3.0\n",
+              "k1    1.0\n",
+              "k4    NaN\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
       ]
     },
     {
@@ -345,11 +393,11 @@
         "population_2022[:2]"
       ],
       "metadata": {
-        "id": "HSspte4Ylrl6",
-        "outputId": "405926c1-9772-4152-d344-b2a6cdf6c28c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HSspte4Ylrl6",
+        "outputId": "405926c1-9772-4152-d344-b2a6cdf6c28c"
       },
       "execution_count": 42,
       "outputs": [
