operacje na Series

--- a/data_science_dla_kazdego/pandas.ipynb
+++ b/data_science_dla_kazdego/pandas.ipynb
@@ -286,11 +286,11 @@
         "pd.Series(data=d, index=['k2', 'k3', 'k1', 'k4'])"
       ],
       "metadata": {
-        "id": "uALCaRLNa1bE",
-        "outputId": "bc62ac29-d3a6-42f3-fcdd-974f21215959",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uALCaRLNa1bE",
+        "outputId": "bc62ac29-d3a6-42f3-fcdd-974f21215959"
       },
       "execution_count": 11,
       "outputs": [
@@ -321,13 +321,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h56_TevyYOMi",
-        "outputId": "829bc48b-aabd-467e-981b-15b682bde040"
+        "outputId": "bab0c0eb-bbf2-4e23-f06d-e98fd48bb4f5"
       },
       "outputs": [
         {
@@ -342,7 +342,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 13
         }
       ],
       "source": [
@@ -355,10 +355,54 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Za pomocą nazwy indeksu możemy wydobyć dane dotyczące liczby lubności w konkretnym kraju, np.:"
+        "Pomimo tego, że `Series` nie są już podklasą `ndarray`, to zachowują się one bardzo podobnie jak tablice. Na przykład pobieranie elementów z `Series`, `slicing`, filtrowanie, czy operacje matematyczne wyglądają bardzo podobnie."
+      ],
+      "metadata": {
+        "id": "ANZLHkX0dJri"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Na przykład za pomocą numeru pozycji możemy pobrać dane dotyczące liczby lubności w konkretnym kraju, np.:"
       ],
       "metadata": {
         "id": "Q0CwV33Uhu3Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_2022[-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HSspte4Ylrl6",
+        "outputId": "1e42d56a-bc66-4264-a7b6-c6ef2faff009"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "38"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Możemy to również zrobić za pomocą nazwy indeksu, np.:"
+      ],
+      "metadata": {
+        "id": "xebbPwrdeT0Z"
       }
     },
     {
@@ -388,30 +432,68 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "population_2022[:2]"
+        "Poniżej widzimy użycie *slicing*u: "
       ],
       "metadata": {
+        "id": "P2l3OvnseuYN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_2022[:3]"
+      ],
+      "metadata": {
+        "id": "NoM5mRq7d_gC",
+        "outputId": "2235766f-2bf9-478d-dc57-a1149ed3e579",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "HSspte4Ylrl6",
-        "outputId": "405926c1-9772-4152-d344-b2a6cdf6c28c"
+        }
       },
-      "execution_count": 42,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "USA      331\n",
-              "Italy     60\n",
+              "USA        331\n",
+              "Italy       60\n",
+              "Germany     83\n",
               "dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_1922[population_1922 > 50]"
+      ],
+      "metadata": {
+        "id": "4KhwK8Lbe8yn",
+        "outputId": "afb5aa2f-7da4-43ea-dcc1-b1989006722b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "USA        110\n",
+              "Germany     62\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -452,6 +534,84 @@
       ],
       "source": [
         "population_2022 - population_1922"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Możemy również sprawdzić jak będzie liczba ludności w danym kraju, jeśli aktualna się podwoi:"
+      ],
+      "metadata": {
+        "id": "VF3GsEkWfs0x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_2022 * 2"
+      ],
+      "metadata": {
+        "id": "lKANm-L0fli8",
+        "outputId": "a459cc34-27e9-4ab2-8b40-9c991402df5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "USA        662\n",
+              "Italy      120\n",
+              "Germany    166\n",
+              "Poland      76\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Interesujące jest zachowanie `Series` gdy chcemy wykonać operacje na dwóch obiektach tego typu, które tylko w części mają te same indeksy. Weźmy `population_2022[:3]`, czyli dane bez `Poland` i  `population_2022[2:]`, czyli dane bez `USA` i `Italy`. Obia obiekty mają więc tylko jeden wspólny indeks, `Germany`. Wykonajmy teraz na tych tablicach operację `+`:"
+      ],
+      "metadata": {
+        "id": "uloKwOcUg6BK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "population_2022[:3] + population_2022[2:]"
+      ],
+      "metadata": {
+        "id": "wd-P9T4egP0i",
+        "outputId": "bb9ce5ac-4b38-4f6f-ec35-487609602ca3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Germany    166.0\n",
+              "Italy        NaN\n",
+              "Poland       NaN\n",
+              "USA          NaN\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
       ]
     },
     {
